deploy/nginx-ingress-resources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poms-nginx-ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/acme-dns01-provider: dns
    certmanager.k8s.io/cluster-issuer: letsencrypt-dns
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/server-snippet: |-
      http2_max_field_size 16k;
      http2_max_header_size 128k;
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: poms-app-service
          servicePort: 8080
